--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,37 +1,20 @@
-# This is the corrected content for your file at:
-# backend/docker-compose.yml
-
-# The 'version' attribute is obsolete and has been removed as per the warning.
 services:
-  # FastAPI application
   app:
     container_name: dokydoc_app
-
-    # build from the current directory (where Dockerfile lives)
     build:
-      context: . # <-- CHANGED FROM ./backend TO .
+      context: .
       dockerfile: Dockerfile
-
-    # expose your port
     ports:
       - "8000:8000"
-
-    # mount the current directory into /app
     volumes:
-      - .:/app # <-- CHANGED FROM ./backend:/app TO .:/app
-
+      - .:/app
     environment:
       - DATABASE_URL=postgresql://postgres:mysecretpassword@db:5432/dokydoc
       - PYTHONPATH=/app
-
     depends_on:
       - db
+    command: uvicorn main:app --host 0.0.0.0 --port 8000  # Removed --reload
 
-    # Note: Using uvicorn directly instead of the 'command' block
-    # can sometimes be more stable in compose files.
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
-
-  # Postgres
   db:
     image: postgres:15-alpine
     container_name: dokydoc_db
