--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,3 +13,6 @@ COPY . .
 
 # Expose the port the app runs on
 EXPOSE 8000
+
+# ADD THIS LINE - tells Docker how to run your app
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
