--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,59 @@
-DATABASE_URL=postgresql://postgres:mysecretpassword@localhost:5432/dokydoc
+# DokyDoc Environment Configuration for Docker
+
+# Environment & Deployment
+ENVIRONMENT=development
+DEBUG=true
+API_VERSION=v1
+
+# Project Settings
+PROJECT_NAME=DokyDoc
+PROJECT_VERSION=1.0.0
+
+# Server Settings
+HOST=0.0.0.0
+PORT=8000
+WORKERS=1
+
+# Database Settings
+DATABASE_URL=postgresql://postgres:simplepass@db:5432/dokydoc
+DATABASE_POOL_SIZE=20
+DATABASE_MAX_OVERFLOW=30
+DATABASE_POOL_TIMEOUT=30
+
+# Security Settings
+SECRET_KEY=your-super-secret-key-here-make-it-at-least-32-characters-long
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# CORS Settings
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+CORS_ALLOW_CREDENTIALS=true
+
+# AI Service Settings
+GEMINI_API_KEY=AIzaSyASiU3Pb3sk4FtQMrg8bSoXDF7cMFwNThQ
+GEMINI_MODEL=gemini-1.5-pro-latest
+GEMINI_VISION_MODEL=gemini-1.5-pro-latest
+GEMINI_MAX_RETRIES=3
+GEMINI_TIMEOUT=60
+
+# File Upload Settings
+MAX_FILE_SIZE=52428800
+UPLOAD_DIR=/app/uploads
+ALLOWED_EXTENSIONS=.pdf,.docx,.doc,.txt
+
+# Cache Settings
+REDIS_URL=redis://redis:6379
+CACHE_TTL=3600
+
+# Logging Settings
+LOG_LEVEL=INFO
+LOG_FORMAT=json
+
+# Rate Limiting
+RATE_LIMIT_PER_MINUTE=100
+RATE_LIMIT_PER_HOUR=1000
+
+# Background Task Settings
+MAX_WORKERS=4
+TASK_TIMEOUT=300
