--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -4,7 +4,7 @@
 [alembic]
 # A path to the Alembic script directory, relative to the main
 # configuration file.
-script_location = app/db/migrations
+script_location = alembic
 
 # Template used to generate migration files.
 # file_template = %%(rev)s_%%(slug)s
